feat: add favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -39,7 +40,6 @@
         <ul class="section-list">
           <li class="section-item">+37525 962 56 45</li>
           <li class="section-item">nanu6ka@gmail.com</li>
-          <li class="section-item"></li>
         </ul>
       </section>
       <section class="section" id="summary">
